--- a/ml/pyproject.toml
+++ b/ml/pyproject.toml
@@ -3,15 +3,11 @@ name = "x5case"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = "==3.12.9"
 dependencies = [
-    "fastapi>=0.116.2",
-    "numpy>=2.3.3",
-    "pandas>=2.3.2",
-    "scikit-learn>=1.7.2",
-    "spacy>=3.8.7",
-    "torch>=2.8.0",
-    "tqdm>=4.67.1",
-    "transformers>=4.56.1",
-    "uvicorn>=0.35.0",
+    "ipykernel>=6.30.1",
+    "pip>=25.2",
+    "setuptools>=80.9.0",
+    "spacy[cuda12x,lookups,transformers]>=3.8.7",
+    "wheel>=0.45.1",
 ]
