--- a/ml/pyproject.toml
+++ b/ml/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = "==3.12.9"
 dependencies = [
     "ipykernel>=6.30.1",
+    "ipywidgets>=8.1.7",
+    "pandas>=2.3.2",
     "pip>=25.2",
     "setuptools>=80.9.0",
     "spacy[cuda12x,lookups,transformers]>=3.8.7",
