--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -34,13 +34,13 @@ services:
       db:
         condition: service_healthy # Запустится только после того, как БД будет готова
 
-  # --- ML-сервис (NER) ---
+  # --- ML-сервис (NER) --- ЗАГЛУШКА mock_ner_service
   ner_service:
     container_name: ner_service
-    build: ../ml # <-- Теперь смотрит на папку ml, которая лежит рядом с backend
+    build: ./mock_ner_service  # <-- Указываем на нашу заглушку
     command: poetry run uvicorn app.main:app --host 0.0.0.0 --port 8001 --reload
     volumes:
-      - ../ml:/app # <-- Монтирует код из папки ml для hot-reload
+      - ./mock_ner_service:/app # <-- Монтируем ее код
     ports:
       - "8001:8001"
     env_file:
