Тестовая связь с бэком

--- a/ml/Dockerfile
+++ b/ml/Dockerfile
@@ -1,12 +1,20 @@
-FROM nvidia/cuda:13.0.0-base-ubuntu22.04
+# ml/Dockerfile
 
-# Заменить latest на что-то другое желательно
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+FROM nvidia/cuda:12.1.0-base-ubuntu22.04
 
+# Устанавливаем uv (современный и быстрый установщик пакетов)
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/
+
+# Устанавливаем рабочую директорию внутри контейнера
 WORKDIR /app
 
-COPY uv.lock pyproject.toml /app/
+# Копируем файлы с зависимостями
+COPY pyproject.toml uv.lock ./
 
+# Устанавливаем зависимости
 RUN uv sync --frozen --no-dev
 
-COPY main.py /app
+# Копируем все .py файлы из корня папки ml в рабочую директорию /app
+COPY *.py ./
+
+# Команда для запуска будет в docker-compose.yml
