--- a/ml/pyproject.toml
+++ b/ml/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "pandas>=2.3.2",
     "pip>=25.2",
     "setuptools>=80.9.0",
-    "spacy[cuda12x,lookups,transformers]>=3.8.7",
+    "spacy[lookups,transformers]>=3.8.7",
     "wheel>=0.45.1",
     "fastapi>=0.111.0",
     "uvicorn[standard]>=0.29.0",
