--- a/ml/Dockerfile
+++ b/ml/Dockerfile
@@ -1,26 +1,28 @@
-FROM nvidia/cuda:12.1.0-base-ubuntu22.04
+# ml/Dockerfile
 
-# Build deps for Python wheels that may need compilation (thinc, blis, etc.)
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-       build-essential \
-       g++ \
-       git \
-    && rm -rf /var/lib/apt/lists/*
+# 1. Используем официальный и легкий образ Python
+FROM python:3.12-slim
 
-# Устанавливаем uv (современный и быстрый установщик пакетов)
+# 2. Устанавливаем системные зависимости для сборки пакетов (spaCy их требует)
+# RUN apt-get update && apt-get install -y --no-install-recommends build-essential && rm -rf /var/lib/apt/lists/*
+
+# 3. Устанавливаем uv
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /bin/
 
-# Устанавливаем рабочую директорию внутри контейнера
+# 4. Устанавливаем рабочую директорию
 WORKDIR /app
 
-# Копируем файл с зависимостями (не используем lock, чтобы учесть изменения)
-COPY pyproject.toml ./
+# 5. Копируем файлы с зависимостями
+COPY pyproject.toml uv.lock ./
 
-# Устанавливаем зависимости
-RUN uv sync --no-dev
+# 6. Устанавливаем Python-зависимости
+RUN uv sync --frozen --no-dev
 
-# Копируем все .py файлы из корня папки ml в рабочую директорию /app
-COPY *.py ./
+# 7. Скачиваем модель spaCy во время сборки образа
+# RUN python -m spacy download ru_core_news_sm
+COPY model ./
+
+# 8. Копируем все ваши Python-файлы в контейнер
+COPY app/*.py ./
 
 # Команда для запуска будет в docker-compose.yml
