--- a/ml/pyproject.toml
+++ b/ml/pyproject.toml
@@ -5,13 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.12.9"
 dependencies = [
-    "ipykernel>=6.30.1",
-    "ipywidgets>=8.1.7",
-    "pandas>=2.3.2",
-    "pip>=25.2",
-    "spacy[cuda12x,transformers]>=3.8.7",
-    
     "fastapi>=0.111.0",
     "uvicorn[standard]>=0.29.0",
-    "pydantic>=2.7.1"
+    "pydantic>=2.7.1",
+    "spacy>=3.8.7",
 ]
