--- a/ml/Dockerfile
+++ b/ml/Dockerfile
@@ -6,6 +6,8 @@ WORKDIR /app
 # Enable bytecode compilation
 ENV UV_COMPILE_BYTECODE=1
 
+# ENV UV_LINK_MODE=copy
+
 # Ensure installed tools can be executed out of the box
 ENV UV_TOOL_BIN_DIR=/usr/local/bin
 
