--- a/ml/pyproject.toml
+++ b/ml/pyproject.toml
@@ -8,5 +8,5 @@ dependencies = [
     "fastapi>=0.111.0",
     "uvicorn[standard]>=0.29.0",
     "pydantic>=2.7.1",
-    "spacy>=3.8.7",
+    "spacy[transformers]>=3.8.7",
 ]
