--- a/ml/pyproject.toml
+++ b/ml/pyproject.toml
@@ -9,4 +9,6 @@ dependencies = [
     "uvicorn[standard]>=0.29.0",
     "pydantic>=2.7.1",
     "spacy[transformers]>=3.8.7",
+    "gunicorn>=23.0.0"
 ]
+
