--- a/ml/pyproject.toml
+++ b/ml/pyproject.toml
@@ -8,7 +8,6 @@ dependencies = [
     "fastapi>=0.111.0",
     "uvicorn[standard]>=0.29.0",
     "pydantic>=2.7.1",
-    "spacy[transformers]>=3.8.7",
-    "gunicorn>=23.0.0"
+    "spacy>=3.8.7",
+    "gunicorn>=23.0.0",
 ]
-
