--- a/ml/pyproject.toml
+++ b/ml/pyproject.toml
@@ -8,6 +8,10 @@ dependencies = [
     "fastapi>=0.111.0",
     "uvicorn[standard]>=0.29.0",
     "pydantic>=2.7.1",
-    "spacy>=3.8.7",
+    "spacy[transformers]>=3.8.7",
     "gunicorn>=23.0.0",
+    "torch>=2.8.0",
 ]
+
+[[tool.uv.index]]
+url = "https://download.pytorch.org/whl/cpu"
