Изменения файлов по выгрузке на стенд

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,13 @@ wheels/
 .env
 .env.*.local
 
+# Модели ML (слишком большие для git)
+ml/model/
+*.bin
+*.pkl
+*.h5
+*.onnx
+
 # Логи и базы данных
 *.log
 *.sql
