--- a/ml/model/config.cfg
+++ b/ml/model/config.cfg
@@ -5,13 +5,13 @@ vectors = null
 init_tok2vec = null
 
 [system]
-gpu_allocator = null
-seed = 0
+gpu_allocator = "pytorch"
+seed = 42
 
 [nlp]
 lang = "ru"
-pipeline = ["tok2vec","ner"]
-batch_size = 128
+pipeline = ["transformer","ner"]
+batch_size = 256
 disabled = []
 before_creation = null
 after_creation = null
@@ -32,42 +32,45 @@ update_with_oracle_cut_size = 100
 @architectures = "spacy.TransitionBasedParser.v2"
 state_type = "ner"
 extra_state_tokens = false
-hidden_width = 64
-maxout_pieces = 2
+hidden_width = 192
+maxout_pieces = 4
 use_upper = true
 nO = null
 
 [components.ner.model.tok2vec]
-@architectures = "spacy.Tok2VecListener.v1"
-width = 96
+@architectures = "spacy-transformers.TransformerListener.v1"
+grad_factor = 1.0
+pooling = {"@layers":"reduce_mean.v1"}
 upstream = "*"
 
-[components.tok2vec]
-factory = "tok2vec"
+[components.transformer]
+factory = "transformer"
+max_batch_items = 8192
+set_extra_annotations = {"@annotation_setters":"spacy-transformers.null_annotation_setter.v1"}
 
-[components.tok2vec.model]
-@architectures = "spacy.Tok2Vec.v2"
+[components.transformer.model]
+@architectures = "spacy-transformers.TransformerModel.v3"
+name = "DeepPavlov/rubert-base-cased"
+mixed_precision = true
 
-[components.tok2vec.model.embed]
-@architectures = "spacy.MultiHashEmbed.v2"
-width = 96
-attrs = ["NORM","PREFIX","SUFFIX","SHAPE"]
-rows = [5000,1000,2500,2500]
-include_static_vectors = false
+[components.transformer.model.get_spans]
+@span_getters = "spacy-transformers.strided_spans.v1"
+window = 128
+stride = 96
 
-[components.tok2vec.model.encode]
-@architectures = "spacy.MaxoutWindowEncoder.v2"
-width = 96
-depth = 4
-window_size = 1
-maxout_pieces = 3
+[components.transformer.model.grad_scaler_config]
+
+[components.transformer.model.tokenizer_config]
+use_fast = true
+
+[components.transformer.model.transformer_config]
 
 [corpora]
 
 [corpora.dev]
 @readers = "spacy.Corpus.v1"
 path = ${paths.dev}
-max_length = 0
+max_length = 500
 gold_preproc = false
 limit = 0
 augmenter = null
@@ -75,43 +78,37 @@ augmenter = null
 [corpora.train]
 @readers = "spacy.Corpus.v1"
 path = ${paths.train}
-max_length = 0
+max_length = 500
 gold_preproc = false
 limit = 0
 augmenter = null
 
 [training]
-accumulate_gradient = 3
+accumulate_gradient = 2
 dev_corpus = "corpora.dev"
 train_corpus = "corpora.train"
 seed = ${system.seed}
 gpu_allocator = ${system.gpu_allocator}
-dropout = 0.1
-patience = 1600
+dropout = 0.2
+patience = 600
 max_epochs = 0
-max_steps = 20000
-eval_frequency = 200
+max_steps = 12000
+eval_frequency = 600
 frozen_components = []
 annotating_components = []
 before_to_disk = null
 before_update = null
 
 [training.batcher]
-@batchers = "spacy.batch_by_words.v1"
-discard_oversize = false
-tolerance = 0.2
+@batchers = "spacy.batch_by_padded.v1"
+discard_oversize = true
+size = 6000
+buffer = 1024
 get_length = null
-
-[training.batcher.size]
-@schedules = "compounding.v1"
-start = 100
-stop = 1000
-compound = 1.001
-t = 0.0
 
 [training.logger]
 @loggers = "spacy.ConsoleLogger.v1"
-progress_bar = false
+progress_bar = true
 
 [training.optimizer]
 @optimizers = "Adam.v1"
@@ -125,14 +122,14 @@ eps = 0.00000001
 
 [training.optimizer.learn_rate]
 @schedules = "warmup_linear.v1"
-warmup_steps = 250
-total_steps = 20000
-initial_rate = 0.00005
+warmup_steps = 800
+total_steps = 12000
+initial_rate = 0.000015
 
 [training.score_weights]
-ents_f = 1.0
-ents_p = 0.0
-ents_r = 0.0
+ents_f = 0.5
+ents_p = 0.25
+ents_r = 0.25
 ents_per_type = null
 
 [pretraining]
@@ -146,5 +143,12 @@ before_init = null
 after_init = null
 
 [initialize.components]
+
+[initialize.components.ner]
+
+[initialize.components.ner.labels]
+@readers = "spacy.read_labels.v1"
+path = "labels.json"
+require = false
 
 [initialize.tokenizer]
