--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,11 @@
-FROM node:18-alpine AS builder
+FROM node:20-alpine AS builder
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci --only=production
+RUN npm ci
 COPY . .
 ARG VITE_API_BASE_URL
 ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
 RUN npm run build
-
-
 
 FROM nginx:alpine
 COPY --from=builder /app/dist /usr/share/nginx/html
