--- a/ml/pyproject.toml
+++ b/ml/pyproject.toml
@@ -15,6 +15,10 @@ prod = [
     "spacy>=3.8.7",
 ]
 dev = [
+    "ipykernel>=6.30.1",
+    "numpy>=1.26.3",
+    "pandas>=2.3.3",
+    "pip>=25.2",
     "spacy[cuda12x,transformers]>=3.8.7",
     "torch>=2.7.1",
 ]
