--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
     build: 
       context: ./frontend
       args:
-        - VITE_API_BASE_URL=${VITE_API_BASE_URL:-http://45.8.251.196:8000/api/v1/}
+        - VITE_API_BASE_URL=${VITE_API_BASE_URL:-http://locallhost/api/v1/}
 
 volumes:
   postgres_data:
