--- a/ml/pyproject.toml
+++ b/ml/pyproject.toml
@@ -12,7 +12,7 @@ prod = [
     "fastapi>=0.111.0",
     "uvicorn[standard]>=0.29.0",
     "pydantic>=2.7.1",
-    "spacy>=3.8.7",
+    "spacy[transformers]>=3.8.7",
 ]
 dev = [
     "ipykernel>=6.30.1",
